--- a/simple-chat/src/styles/chat-item.css
+++ b/simple-chat/src/styles/chat-item.css
@@ -18,9 +18,25 @@
 }
 
 .chat__image {
-    margin-right: 20px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+   border-radius: 50px;
+}
+
+.crop-container {
     width: 50px;
-    border-radius: 50px;
+    height: 50px;
+    margin-right: 20px;
+    overflow: hidden;
+}
+
+.text-cut {
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .chat__main {
