--- a/simple-chat/src/index/index.css
+++ b/simple-chat/src/index/index.css
@@ -5,3 +5,27 @@
     display: flex;
     flex-direction: column;
 }
+
+
+.wave {
+    position: absolute;
+    border-radius: 50%;
+    background-color: rgba(34, 34, 34, 0.2);
+    transform: scale(0);
+    animation: wave-effect 0.6s linear;
+    pointer-events: none;
+}
+
+@keyframes wave-effect {
+    to {
+        transform: scale(4);
+        opacity: 0;
+    }
+}
+
+
+.chat {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
