--- a/simple-chat/src/styles/account.css
+++ b/simple-chat/src/styles/account.css
@@ -17,3 +17,11 @@
     font-size: 0.8rem;
     color: #cd9fd9;
 }
+
+.account__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+   border-radius: 50px;
+}
