--- a/simple-chat/src/styles/global.css
+++ b/simple-chat/src/styles/global.css
@@ -24,3 +24,10 @@ body {
     color: #fff; 
     cursor: pointer;
 }
+
+.crop-container {
+    width: 50px;
+    height: 50px;
+    margin-right: 20px;
+    overflow: hidden;
+}
