--- a/simple-chat/src/chat/chat.css
+++ b/simple-chat/src/chat/chat.css
@@ -1,18 +1,19 @@
 .messages {
     flex-grow: 1;
     background-color: #f5f5f5;  
-    padding: 80px 10px 60px 10px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    
+
+    overflow-y: auto;
+}
+
+.messages > :first-child {
+    margin-top: auto;
 }
 
 .form {
-    position: fixed;
-    bottom: 0;
-    width: inherit;
-    z-index: 1;
-
     display: inline-block;
     border: 1px solid rgba(25, 25, 25, 0.32);
     display: flex;
