--- a/simple-chat/src/index/index.css
+++ b/simple-chat/src/index/index.css
@@ -1,9 +1,12 @@
 .chats {
     flex-grow: 1;
     background-color: #fff;  
-    padding: 80px 10px 20px 10px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
+    
+    overflow-y: auto;
+    max-height: calc(100vh - 64px);
 }
 
 
