--- a/index.style.css
+++ b/index.style.css
@@ -1,9 +1,36 @@
 .chats {
     flex-grow: 1;
     background-color: #fff;  
-    padding: 80px 10px 20px 10px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
+    
+    overflow-y: auto;
+    max-height: calc(100vh - 64px);
+}
+
+
+.wave {
+    position: absolute;
+    border-radius: 50%;
+    background-color: rgba(34, 34, 34, 0.2);
+    transform: scale(0);
+    animation: wave-effect 0.6s linear;
+    pointer-events: none;
+}
+
+@keyframes wave-effect {
+    to {
+        transform: scale(4);
+        opacity: 0;
+    }
+}
+
+
+.chat {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
 }
 
 .open-sans {
@@ -33,6 +60,13 @@ body {
     cursor: pointer;
 }
 
+.crop-container {
+    width: 50px;
+    height: 50px;
+    margin-right: 20px;
+    overflow: hidden;
+}
+
 html {
     box-sizing: border-box;
 }
@@ -48,11 +82,6 @@ a {
 }
 
 .header {
-    position: fixed;
-    top: 0;
-    width: inherit;
-    z-index: 1;
-
     background: rgb(142,36,170);
     background: linear-gradient(0deg, rgba(142,36,170,1) 0%, rgba(205,159,217,1) 170%); 
     display: flex;
@@ -90,6 +119,7 @@ a {
     background-color: #fff;
     align-items: center;
     margin-top: 5px;
+    min-height: 60px;
 }
 
 .chat__underline {
@@ -107,14 +137,7 @@ a {
     height: 100%;
     object-fit: cover;
     object-position: center;
-   border-radius: 50px;
-}
-
-.crop-container {
-    width: 50px;
-    height: 50px;
-    margin-right: 20px;
-    overflow: hidden;
+    border-radius: 50px;
 }
 
 .chat__main {
@@ -148,3 +171,33 @@ a {
     color: #9837b0;
 }
 
+.pulse {
+    box-shadow: 0 0 0 rgba(204,169,44, 0.4);
+    animation: pulse 2s infinite;
+  }
+  
+  @-webkit-keyframes pulse {
+    0% {
+      -webkit-box-shadow: 0 0 0 0 rgba(204,169,44, 0.4);
+    }
+    70% {
+        -webkit-box-shadow: 0 0 0 10px rgba(204,169,44, 0);
+    }
+    100% {
+        -webkit-box-shadow: 0 0 0 0 rgba(204,169,44, 0);
+    }
+  }
+  @keyframes pulse {
+    0% {
+      -moz-box-shadow: 0 0 0 0 rgba(204,169,44, 0.4);
+      box-shadow: 0 0 0 0 rgba(204,169,44, 0.4);
+    }
+    70% {
+        -moz-box-shadow: 0 0 0 10px rgba(204,169,44, 0);
+        box-shadow: 0 0 0 10px rgba(204,169,44, 0);
+    }
+    100% {
+        -moz-box-shadow: 0 0 0 0 rgba(204,169,44, 0);
+        box-shadow: 0 0 0 0 rgba(204,169,44, 0);
+    }
+  }
