--- a/react-chat/src/component/floatButton/FloatButton.scss
+++ b/react-chat/src/component/floatButton/FloatButton.scss
@@ -1,7 +1,7 @@
-.float-button {
+svg.float-button {
     background-color: #f9d667;
     border-radius: 30px;
-    font-size: 40px;
+    font-size: 4rem;
     color: #72612e;
     padding: 10px;
     position: fixed;
