--- a/react-chat/src/index.scss
+++ b/react-chat/src/index.scss
@@ -12,12 +12,12 @@ a {
   text-decoration: none;
 }
 
-.material-icons { 
+svg.material-icons { 
   color: #fff; 
   cursor: pointer;
 }
 
-.status {
+svg.status {
   font-size: 18px;
   color: #9837b0;
 }
