--- a/react-chat/src/pages/ChatPage/ChatPage.scss
+++ b/react-chat/src/pages/ChatPage/ChatPage.scss
@@ -21,10 +21,10 @@
     align-items: center;
     padding: 0 10px;
     background-color: #fff;
-}
 
-span.form__attachment {
-    color: #707070;
+    svg.form__attachment {
+        color: #707070;
+    }
 }
 
 form {
